welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: ';' expected but 'return' found.
  } return "7:00"
    ^